Revert "Remove bad trailing comma (#1737)"
This reverts commit fd8f76296592c9ab55590159369a4b612c72be9f.

--- a/.opensource/project.json
+++ b/.opensource/project.json
@@ -8,6 +8,7 @@
 
     "content": "README.md",
 
+    // Other markdown pages that should be rendered nicely
     "pages" : [
         "ROADMAP.md",
         "Carthage.md",
@@ -15,9 +16,11 @@
         "CODE_OF_CONDUCT.md"
     ],
 
+    // Related projects on Github, in the format $owner/$repo[/$subproject]
+    // where subproject is optional.
     "related": [
       "firebase/quickstart-ios",
       "firebase/firebaseui-ios"
-    ]
+    ],
 
 }
